src/assets/css/utils.css
/* SCREEN READER ONLY */

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

/* GRID UTILS */
.grid-gap-sm {
  display: grid;
  gap: var(--spacing-sm);
}


/* =========================
   COLOR UTILITIES
========================= */

/* Background */
.bg-white {
  background: var(--white);
}

.bg-stone-100 {
  background: var(--stone-100);
}

.bg-stone-150 {
  background: var(--stone-150);
}

.bg-stone-600 {
  background: var(--stone-600);
}

.bg-stone-900 {
  background: var(--stone-900);
}

.bg-brown-800 {
  background: var(--brown-800);
}

.bg-rose-800 {
  background: var(--rose-800);
}

.bg-rose-50 {
  background: var(--rose-50);
}


/* Text color */
.text-white {
  color: var(--white);
}

.text-stone-100 {
  color: var(--stone-100);
}

.text-stone-150 {
  color: var(--stone-150);
}

.text-stone-600 {
  color: var(--stone-600);
}

.text-stone-900 {
  color: var(--stone-900);
}

.text-brown-800 {
  color: var(--brown-800);
}

.text-rose-800 {
  color: var(--rose-800);
}

.text-rose-50 {
  color: var(--rose-50);
}


/* =========================
   FONT FAMILY
========================= */

.ff-heading {
  font-family: var(--ff-heading);
}

.ff-primary {
  font-family: var(--ff-primary);
}


/* =========================
   FONT WEIGHT
========================= */

.fw-r {
  font-weight: var(--fw-r);
}

/* 400 */
.fw-sb {
  font-weight: var(--fw-sb);
}

/* 600 */
.fw-b {
  font-weight: var(--fw-b);
}

/* 700 */


/* =========================
   FONT SIZE
========================= */

.fs-xl {
  font-size: var(--fs-xl);
}

.fs-md {
  font-size: var(--fs-md);
}

.fs-sm {
  font-size: var(--fs-sm);
}

.fs-xs {
  font-size: var(--fs-xs);
}

